--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -27,7 +27,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.activation.jar=web/WEB-INF/lib/activation.jar
 file.reference.jstl.jar=web/WEB-INF/lib/jstl.jar
+file.reference.mail.jar=web/WEB-INF/lib/mail.jar
 file.reference.standard.jar=web/WEB-INF/lib/standard.jar
 includes=**
 j2ee.compile.on.save=true
@@ -38,7 +40,9 @@ j2ee.server.type=Tomcat70
 jar.compress=false
 javac.classpath=\
     ${file.reference.jstl.jar}:\
-    ${file.reference.standard.jar}
+    ${file.reference.standard.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.activation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
