--- a/trunk/web/WEB-INF/web.xml
+++ b/trunk/web/WEB-INF/web.xml
@@ -48,6 +48,12 @@
             <param-name>CHECKOUT_REDIRECT_PAGE</param-name>
             <param-value>checkout.jsp</param-value>
         </init-param>
+        <init-param>
+            <param-name>HOME_PAGE</param-name>
+            <param-value>index.jsp</param-value>
+        </init-param>
+        
+        
     </servlet>
     <!-- The Admin servlet is defined here -->
     <servlet>
@@ -82,6 +88,14 @@
         <servlet-name>ContactUsServlet</servlet-name>
         <servlet-class>servlets.ContactUsServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>servlets.LoginServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LoginProfileServlet</servlet-name>
+        <servlet-class>servlets.LoginProfileServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Shop</servlet-name>
         <url-pattern>/shop</url-pattern>
@@ -93,6 +107,14 @@
     <servlet-mapping>
         <servlet-name>ContactUsServlet</servlet-name>
         <url-pattern>/contactUs</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginProfileServlet</servlet-name>
+        <url-pattern>/loginProfile</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
@@ -113,7 +135,7 @@
             <taglib-location>/WEB-INF/pcshop.tld</taglib-location>
         </taglib>
     </jsp-config>
-    <security-constraint>
+    <!--    <security-constraint>
         <web-resource-collection>
             <web-resource-name>Admin Page</web-resource-name>
             <description>to control the administrator access</description>
@@ -125,7 +147,7 @@
         <user-data-constraint>
             <transport-guarantee>NONE</transport-guarantee>
         </user-data-constraint>
-    </security-constraint>
+    </security-constraint>-->
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>TheShop</web-resource-name>
@@ -145,4 +167,8 @@
             <form-error-page>/login_error.jsp</form-error-page>
         </form-login-config>
     </login-config>
+    <!--    <login-config>
+        <auth-method>BASIC</auth-method>
+        <realm-name>Basic Authentication</realm-name>
+    </login-config>-->
 </web-app>
