--- a/trunk/web/WEB-INF/web.xml
+++ b/trunk/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
         <!-- This init vale has been added to support the Administartor servlet -->
         <init-param>
             <param-name>CHECKOUT_PAGE</param-name>
-            <param-value>/checkout.jsp</param-value>
+            <param-value>checkout.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>JDBC_URL</param-name>
@@ -14,43 +14,48 @@
         </init-param>
         <init-param>
             <param-name>SHOW_PAGE</param-name>
-            <param-value>/show.jsp</param-value>
+            <param-value>show.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>PRODUCT_PAGE</param-name>
-            <param-value>/productDetail.jsp</param-value>
+            <param-value>productDetail.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>PRODUCT_COMPONENT_PAGE</param-name>
-            <param-value>/product_comp.jsp</param-value>
+            <param-value>product_comp.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>THANKYOU_PAGE</param-name>
-            <param-value>/thankyou.jsp</param-value>
+            <param-value>thankyou.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>DETAIL_PAGE</param-name>
-            <param-value>/detail.jsp</param-value>
+            <param-value>detail.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>BYE_PAGE</param-name>
-            <param-value>/bye.jsp</param-value>
+            <param-value>bye.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>PROFILE_PAGE</param-name>
-            <param-value>/profile.jsp</param-value>
+            <param-value>profile.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>USER_PAGE</param-name>
-            <param-value>/user.jsp</param-value>
+            <param-value>user.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>CHECKOUT_REDIRECT_PAGE</param-name>
             <param-value>checkout.jsp</param-value>
         </init-param>
         <init-param>
+            <param-name>PROFILE_CHANGE</param-name>
+            <param-value>profile_change.jsp</param-value>
+        </init-param>
+        
+        <init-param>
             <param-name>HOME_PAGE</param-name>
-            <param-value>index.jsp</param-value>
+            <param-value>../index.jsp</param-value>
         </init-param>
         
         
@@ -61,35 +66,32 @@
         <servlet-class>servlets.AdminServlet</servlet-class>
         <init-param>
             <param-name>ADMIN_WARE_HOUSE_PAGE</param-name>
-            <param-value>/adminWareHouse.jsp</param-value>
+            <param-value>adminWareHouse.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>ADMIN_PRODUCT_PAGE</param-name>
-            <param-value>/adminProduct.jsp</param-value>
+            <param-value>adminProduct.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>ADMIN_PRODUCT_DETAIL_PAGE</param-name>
-            <param-value>/product_comp_admin.jsp</param-value>
+            <param-value>product_comp_admin.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>ADD_PRODUCT_PAGE</param-name>
-            <param-value>/addProduct.jsp</param-value>
+            <param-value>addProduct.jsp</param-value>
         </init-param>
         <init-param>
             <param-name>JDBC_URL</param-name>
             <param-value>jdbc:mysql://localhost/pcshop?user=root&amp;password=sesame</param-value>
         </init-param>
-        <init-param>
-            <param-name>THANK_YOU_PAGE</param-name>
-            <param-value>/thankyou.jsp</param-value>
-        </init-param>
+      
     </servlet>
     <servlet>
         <servlet-name>ContactUsServlet</servlet-name>
         <servlet-class>servlets.ContactUsServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>login</servlet-name>
+        <servlet-name>Login</servlet-name>
         <servlet-class>servlets.LoginServlet</servlet-class>
     </servlet>
     <servlet>
@@ -98,23 +100,23 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Shop</servlet-name>
-        <url-pattern>/shop</url-pattern>
+        <url-pattern>/mainApp/shop</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>AdminServlet</servlet-name>
-        <url-pattern>/admin</url-pattern>
+        <url-pattern>/administrator/admin</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>ContactUsServlet</servlet-name>
-        <url-pattern>/contactUs</url-pattern>
+        <url-pattern>/contactUs/contactUs</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>login</servlet-name>
-        <url-pattern>/login</url-pattern>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/administrator/login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LoginProfileServlet</servlet-name>
-        <url-pattern>/loginProfile</url-pattern>
+        <url-pattern>/login/loginProfile</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
@@ -151,7 +153,7 @@
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>TheShop</web-resource-name>
-            <url-pattern>/checkout.jsp</url-pattern>
+            <url-pattern>/mainApp/checkout.jsp</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>tomcat</role-name>
@@ -163,8 +165,8 @@
     <login-config>
         <auth-method>FORM</auth-method>
         <form-login-config>
-            <form-login-page>/login.jsp</form-login-page>
-            <form-error-page>/login_error.jsp</form-error-page>
+            <form-login-page>/login/login.jsp</form-login-page>
+            <form-error-page>/login/login_error.jsp</form-error-page>
         </form-login-config>
     </login-config>
     <!--    <login-config>
