--- a/trunk/web/WEB-INF/web.xml
+++ b/trunk/web/WEB-INF/web.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee         http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+    http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+
     <servlet>
         <servlet-name>Shop</servlet-name>
         <servlet-class>servlets.ShopServlet</servlet-class>
@@ -98,6 +102,10 @@
         <servlet-name>LoginProfileServlet</servlet-name>
         <servlet-class>servlets.LoginProfileServlet</servlet-class>
     </servlet>
+    
+    
+    
+     <!-- servlet mappings -->
     <servlet-mapping>
         <servlet-name>Shop</servlet-name>
         <url-pattern>/mainApp/shop</url-pattern>
@@ -118,11 +126,20 @@
         <servlet-name>LoginProfileServlet</servlet-name>
         <url-pattern>/login/loginProfile</url-pattern>
     </servlet-mapping>
+    
+    
+    
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+    
+    
     <jsp-config>
         <taglib>
             <taglib-uri>http://java.sun.com/jstl/core</taglib-uri>
@@ -137,19 +154,7 @@
             <taglib-location>/WEB-INF/pcshop.tld</taglib-location>
         </taglib>
     </jsp-config>
-    <!--    <security-constraint>
-        <web-resource-collection>
-            <web-resource-name>Admin Page</web-resource-name>
-            <description>to control the administrator access</description>
-            <url-pattern>/admin.jsp</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <role-name>admin</role-name>
-        </auth-constraint>
-        <user-data-constraint>
-            <transport-guarantee>NONE</transport-guarantee>
-        </user-data-constraint>
-    </security-constraint>-->
+    
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>TheShop</web-resource-name>
@@ -169,8 +174,5 @@
             <form-error-page>/login/login_error.jsp</form-error-page>
         </form-login-config>
     </login-config>
-    <!--    <login-config>
-        <auth-method>BASIC</auth-method>
-        <realm-name>Basic Authentication</realm-name>
-    </login-config>-->
+    
 </web-app>
