--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.yourl</groupId>
-  <artifactId>yourl</artifactId>
+  <groupId>mypcshop</groupId>
+  <artifactId>mypcshop</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>yourl</name>
-  <description>Url-shortener web app</description>
+  <name>mypcshop</name>
+  <description>PC shop web application</description>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
